force-app/main/default/objects/Item__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>The family/category of the item. Used for filtering in the Item Purchase Tool.</description>
    <inlineHelpText>Select a category for this item to make it searchable in the store.</inlineHelpText>
    <label>Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category A</fullName>
            </value>
            <value>
                <fullName>Category B</fullName>
            </value>
            <value>
                <fullName>Category C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>