force-app/main/default/objects/Item__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Stores the URL of the item image fetched from Unsplash API.</description>
    <inlineHelpText>This field is automatically populated based on the item name using Unsplash integration.</inlineHelpText>
    <label>Image</label>
    <type>Url</type>
</CustomField>